<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/competition_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            >

            <TextView
                android:id="@+id/competition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColor="#fdf7ef"
                android:textSize="30sp"
                android:textStyle="bold"
                />

        </android.support.design.widget.AppBarLayout>


        <TextView
            android:id="@+id/num_starters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/num_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textSize="20sp"
            />


        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/app_bar"
            android:gravity="end"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <View
            android:id="@+id/divider_one"
            style="@style/Divider"
            android:layout_below="@+id/num_starters"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_one"
            android:padding="8dp"
            android:textSize="28sp"
            />


        <TextView
            android:id="@+id/club"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textSize="14sp"
            />


        <TextView
            android:id="@+id/position"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/divider_one"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/position"
            android:padding="8dp"
            android:text="@string/result"
            android:textSize="21sp"/>

        <TextView
            android:id="@+id/top_three_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/position"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/top_three"
            android:textSize="21sp"
            />

        <TextView
            android:id="@+id/difference_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/position"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/difference"
            android:textSize="21sp"
            />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/result_title"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time"
            android:padding="8dp"
            android:paddingTop="24dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/top_three_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/speed"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/top_three_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_three_time"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/difference_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/result_title"
            android:padding="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/difference_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/difference_time"
            android:padding="8dp"
            android:textSize="20sp"
            />
    </RelativeLayout>
</ScrollView>